# CarTrack

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
src/: Main.cpp  main.cpp
src/utils/: CameraListParser.cpp  CameraListParser.h  camera_kd_tree.cpp  camera_kd_tree.h  camera_list_parser.cpp  camera_list_parser.h  read_cameras.cpp  read_cameras.h
tests/: main.cpp  sample_cameras.json
tests/utils/: read_cameras.cpp  utils.cpp  utils.h
